add: answers checking
